<resources>
    <string name="search_title">Поиск</string>
    <string name="option_settings">Настройки</string>
    <string name="option_about_help">Информация</string>
    <string name="option_other">Другое</string>
    <string name="view_navigation_open">Open</string>
    <string name="view_navigation_close">Close</string>
    <string name="income_toolbar_name">Доход</string>
    <string name="outcome_toolbar_name">Расход</string>
    <string name="transfer_toolbar_name">Перевод</string>
    <string name="report_toolbar_name">Статистика</string>
    <string name="default_add_toolbar_name">Кошелек</string>
    <string name="text_undo">Отмена</string>
    <string name="added_income" formatted="false">%s: добавлено %.2f%s</string>
    <string name="added_outcome" formatted="false">%s: потрачено %.2f%s</string>
    <string name="added_transfer" formatted="false">%s: переведено %.2f%s</string>
    <string name="outcome_amount_required">Пожалуйста, укажите сумму</string>
    <string name="currencies">Валюты</string>
    <string name="currency">Валюта</string>
    <string name="ok">OK</string>
    <string name="ok_continue">Продолжить</string>
    <string name="amount">Сумма</string>
    <string name="amount_percent">Сумма(%)</string>
    <string name="period_this_week">Текущая неделя</string>
    <string name="period_this_month">Текущий месяц</string>
    <string name="period_last_week">Прошлая неделя</string>
    <string name="period_last_month">Прошлый месяц</string>
    <string name="attach_picture">Прикрепить фото</string>
    <string name="calculator">Калькулятор</string>
    <string name="new_picture">Сфотографировать</string>
    <string name="select_from_gallery">Выбрать из галереи</string>
    <string name="select_image">Выберите фото..</string>
    <string name="cheque_image">Добавьте фотографию</string>
    <string name="location">Укажите местоположение</string>
    <string name="total_amount">Общая сумма</string>
    <string name="balance">Баланс</string>
    <string name="header_expenses">Расходы</string>
    <string name="account">Счёт</string>
    <string name="accounts">Счета</string>
    <string name="date">Дата</string>
    <string name="category">Категория</string>
    <string name="note">Заметка</string>
    <string name="add_account">Добавить счёт</string>
    <string name="account_name">Название счёта</string>
    <string name="title">Название</string>
    <string name="content">Содержание</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="add_amount">Добавить сумму</string>
    <string name="edit_account">Редактировать счёт</string>
    <string name="delete_account_confirm">Удалить счёт?</string>
    <string name="no_data_available">У Вас пока нет данных.</string>
    <string name="no_goal_data_available">Вы не добавили ни одной цели :(</string>
    <string name="no_data_add_new">Нажмите на \"+\" чтобы добавить свою первую запись.</string>
    <string name="include_account_to_balance">Учитывать в общем балансе</string>
    <string name="opening_amount">Текущий баланс</string>
    <string name="history">История</string>
    <string name="chart">График</string>
    <string name="goals">Цели</string>
    <string name="calendar">Календарь</string>
    <string name="regular_transactions">Регулярные операции</string>
    <string name="notes_and_todo">Заметки и списки</string>
    <string name="statistics">Статистика</string>
    <string name="csv_export">Экспорт в CSV</string>
    <string name="drive_export">Экспорт в Google Drive</string>
    <string name="csv_export_dialog_content">Будет создан CSV файл ваших транзакий.</string>
    <string name="csv_export_inprogress">Экспортирование транзакций в CSV..</string>
    <string name="csv_export_completed">Файл CSV успешно создан.</string>
    <string name="backup">Резервное копирование</string>
    <string name="db_backup">Создать бэкап базы</string>
    <string name="db_restore">Восстановить базу</string>
    <string name="backup_dialog_content">Будет создана резервная копия базы. (<i>В настройках можно включить авто-бэкап ваших данных.</i>)</string>
    <string name="restore_dialog_content">База будет восстановлена из резервной копии.</string>
    <string name="auto_backup">Авто-бэкап</string>
    <string name="auto_backup_enabled">Включить авто-бэкап</string>
    <string name="auto_backup_enabled_summary">Резервная копия базы данных ежедневно в указанное время</string>
    <string name="backup_database_inprogress">Копирование базы..</string>
    <string name="restore_database_inprogress">Восстановление базы..</string>
    <string name="backup_completed">Резервная копия успешно создана</string>
    <string name="restore_completed">База успешно восстановлена</string>
    <string name="restore_failed">Файл резервной копии не найден.</string>
    <string name="synchronizeIt">Синхронизировать</string>
    <string name="synchronize">Синхронизация</string>
    <string name="day_title_today">Сегодня</string>
    <string name="day_title_yesterday">Вчера</string>
    <string name="day_title_tomorrow">Завтра</string>
    <string name="day_mon">Пн</string>
    <string name="day_tue">Вт</string>
    <string name="day_wed">Ср</string>
    <string name="day_thr">Чт</string>
    <string name="day_fri">Пт</string>
    <string name="day_sat">Сб</string>
    <string name="day_sun">Вс</string>
    <string name="sunday">Воскресенье</string>
    <string name="monday">Понедельник</string>
    <string name="tuesday">Вторник</string>
    <string name="wednesday">Среда</string>
    <string name="thursday">Четверг</string>
    <string name="friday">Пятница</string>
    <string name="saturday">Суббота</string>
    <string name="month_jan">ЯНВ</string>
    <string name="month_feb">ФЕВ</string>
    <string name="month_mar">МАР</string>
    <string name="month_apr">АПР</string>
    <string name="month_mai">МАЙ</string>
    <string name="month_jun">ИЮН</string>
    <string name="month_jul">ИЮЛ</string>
    <string name="month_aug">АВГ</string>
    <string name="month_sep">СЕН</string>
    <string name="month_oct">ОКТ</string>
    <string name="month_nov">НОЯ</string>
    <string name="month_dec">ДЕК</string>
    <string name="month_x_jan">Январь</string>
    <string name="month_x_feb">Февраль</string>
    <string name="month_x_mar">Март</string>
    <string name="month_x_apr">Апрель</string>
    <string name="month_x_mai">Май</string>
    <string name="month_x_jun">Июнь</string>
    <string name="month_x_jul">Июль</string>
    <string name="month_x_aug">Август</string>
    <string name="month_x_sep">Сентябрь</string>
    <string name="month_x_oct">Октябрь</string>
    <string name="month_x_nov">Ноябрь</string>
    <string name="month_x_dec">Декабрь</string>
    <string name="account_type_cash">Наличные</string>
    <string name="account_type_bank">Банковский счёт</string>
    <string name="account_type_credit_card">Кредитная карта</string>
    <string name="account_type_other">Другой</string>
    <string name="goal">Цель</string>
    <string name="goal_name">Название</string>
    <string name="required_amount">Необходимая сумма</string>
    <string name="goal_current_amount">Накопленная сумма(необязательно)</string>
    <string name="goal_finish_date">Дата завершения</string>
    <string name="add_goal">Добавить цель</string>
    <string name="application_info_title">Информация о приложении</string>
    <string name="libraries_title">Libraries &amp; Resources</string>
    <string name="license_title">License</string>
    <string name="third_party_licenses_title">3rd Party Licenses</string>
    <string name="title_activity_about">О приложении</string>
    <string name="choose_photo">Выберите изображение</string>
    <string name="add_amount_to_goal">Добавить сумму</string>
    <string name="remove_goal">Удалить цель</string>
    <string name="remove_item_confirm">Удалить эту запись?</string>
    <string name="remove_goal_confirm">Удалить эту цель?</string>
    <string name="remove_account_confirm">Удалить этот счет?</string>
    <string name="remove_account_warning">Транзакции связанные с этим счетом будут также удалены!</string>
    <string name="text_total_income">Суммарный доход</string>
    <string name="text_total_outcome">Суммарный расход</string>
    <string name="incomes">Доходы</string>
    <string name="outcomes">Расходы</string>
    <string name="type">Тип</string>
    <string name="balance_formatted" formatted="false">Баланс %s</string>
    <string name="edit">Редактировать</string>
    <string name="edit_entity">Редактировать запись</string>
    <string name="remove">Удалить</string>
    <string name="title_export_email">Экспорт %1$s-файла из MoneyMe</string>
    <string name="description_export_email">MoneyMe экспорт из </string>
    <string name="title_select_export_destination">Выберите получателя файла-экспорта</string>
    <string name="toast_backup_folder_not_found">Каталог для резервных копий не найден. Возможно карта памяти не подключена.</string>
    <string name="title_select_backup_to_restore">Выберите резервную копию для восстановления</string>
     <string name="application_info_text" formatted="false">
        <![CDATA[
            <p>Version: %s</p>
        ]]>
    </string>
    <string name="pref_history_order">pref_history_order</string>
    <string name="pref_history_period">pref_history_period</string>
    <string name="pref_history_show_photos">pref_history_show_photos</string>
    <string name="pref_month_start">pref_month_start</string>
    <string name="pref_backup_frequency">pref_backup_frequency</string>
    <string name="pref_auto_backup">pref_auto_backup</string>
    <string name="pref_notify_time">pref_notify_time</string>
    <string name="pref_first_time_run">pref_first_time_run</string>
    <string name="pref_default_export_email">pref_default_export_email</string>
    <string name="key_previous_minor_version" translatable="false">previous_minor_version</string>
    <string name="reset_preferences">Сброс настроек</string>
    <string name="reset_preferences_confirm">Установить все настройки в значения по умолчанию?</string>
    <string name="reset">Сброс</string>
    <string name="history_order_asc">Старые наверху</string>
    <string name="history_order_desc">Новые наверху</string>
    <string name="pref_history_order_title">Порядок отображения операций</string>
    <string name="pref_history_period_title">Период операций</string>
    <string name="pref_history_show_photos_title">Показывать изображения</string>
    <string name="pref_month_start_title">Начало месяца</string>
    <string name="number">число</string>
    <string name="history_period_current">Текущий месяц</string>
    <string name="history_period_2">2 месяца</string>
    <string name="history_period_3">3 месяца</string>
    <string name="history_period_6">6 месяцев</string>
    <string name="history_period_12">Год</string>
    <string name="greeting">Добро пожаловать!</string>
    <string name="greeting_thanks">Спасибо за выбор MoneyMe</string>
    <string name="confirm">Подтвердить</string>
    <string name="choose_todo_color">Цвет события</string>
    <string name="checklist_on">Включить список</string>
    <string name="checklist_off">Выключить список</string>
    <string name="transparent">Прозрачный</string>
    <string name="colored">Красочный</string>
    <string name="widget_text_color">Цвет текста</string>
    <string name="widget_text_color_description">Нажмите для выбора цвета текста</string>
    <string name="widget_background_color">Фон</string>
    <string name="choose_backup_source">Выберите расположение резервной копии</string>
    <string name="restore_program">Восстановление</string>
    <string name="google_drive">Google Drive</string>
    <string name="local_storage">Локальное хранилище</string>
    <string name="restore_app_from_backup">Восстановить из резервной копии</string>
    <string name="new_user">Новый пользователь</string>
</resources>