<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_remove_todo"
        android:title="@string/remove"
        android:orderInCategory="1"
        android:icon="@drawable/ic_delete_white"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_checklist_on"
        android:orderInCategory="2"
        android:title="@string/checklist_on"
        android:visible="false"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_checklist_off"
        android:orderInCategory="3"
        android:title="@string/checklist_off"
        android:visible="false"
        app:showAsAction="never"/>

    <item android:id="@+id/change_todo_color"
        android:title="@string/choose_todo_color"
        android:orderInCategory="4"
        app:showAsAction="never"/>
</menu>