<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".WidgetConfigurationActivity" >

    <RadioGroup
        android:id="@+id/widget_config_radiogroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/widget_config_transparent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/transparent" />

        <RadioButton
            android:id="@+id/widget_config_colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/colored" />
    </RadioGroup>

    <LinearLayout android:id="@+id/widget_config_textcolor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:baselineAligned="false"
        android:padding="10dp"
        android:background="?android:attr/selectableItemBackground">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Text.Subhead"
            android:textColor="@color/colorPrimaryText"
            android:text="@string/widget_text_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Text.Body1"
            android:textColor="@color/colorSecondaryText"
            android:text="@string/widget_text_color_description"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/widget_config_background"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:padding="10dp"
        android:background="?android:attr/selectableItemBackground" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            style="@style/Text.Subhead"
            android:textColor="@color/colorPrimaryText"
            android:text="@string/widget_background_color" />

        <ImageView
            android:id="@+id/widget_config_background_circle"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/circle" />

    </LinearLayout>

    <Button
        android:id="@+id/widget_config_confirm"
        style="?android:attr/buttonBarButtonStyle"
        android:textColor="#FF9800"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/confirm" />

</LinearLayout>