<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

    <LinearLayout
        android:id="@+id/sliceColor"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginRight="5dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"/>

    <TextView
        android:id="@+id/sliceCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        style="@style/Text.Caption"
        android:text="@string/category"/>
    </LinearLayout>

    <TextView
        android:id="@+id/sliceAmount"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        style="@style/Text.Caption"
        android:gravity="center"
        android:text="@string/amount"/>

    <TextView
        android:id="@+id/sliceAmountPercent"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        style="@style/Text.Caption"
        android:text="@string/amount_percent"
        android:gravity="center"/>

</LinearLayout>