<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:hint="@string/goal_name">

        <EditText android:id="@+id/goalAddName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textAppearance="@style/Text.Subhead"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/required_amount"
        android:minHeight="?android:attr/listPreferredItemHeight">

        <EditText android:id="@+id/goalAddRequired"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:inputType="number"
            android:maxLength="9"
            android:textAppearance="@style/Text.Subhead"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/goal_current_amount"
        android:minHeight="?android:attr/listPreferredItemHeight">

        <EditText android:id="@+id/goalAddAvailable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textAppearance="@style/Text.Subhead"
            android:inputType="number"
            android:maxLength="9"/>

    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:id="@+id/from_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:animateLayoutChanges="true">

        <ImageView
            android:id="@+id/add_income_tags_icon"
            style="@style/ImageView.Form"
            android:paddingLeft="4dp"
            android:src="@drawable/ic_clock_end" />

        <Button
            android:id="@+id/goalAddDeadlineDate"
            style="@style/Button.Flat.Select"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/goal_finish_date"
            android:text="12-12-12"/>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        android:hint="@string/note"
        app:counterMaxLength="200"
        android:minHeight="?android:attr/listPreferredItemHeight">
        <EditText
            android:id="@+id/goalAddNote"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Text.Subhead"
            android:inputType="textShortMessage|textAutoCorrect|textCapSentences|textMultiLine|textAutoComplete"
            android:maxLength="200"
            android:maxLines="2"  />
    </android.support.design.widget.TextInputLayout>

</LinearLayout>