<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-thin"
        android:gravity="center"
        android:paddingBottom="32dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="24dp"
        android:text="@string/restore_program"
        android:textColor="@color/colorWhite"
        android:textSize="28sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="5"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <Button
                android:id="@+id/intro_driveButton"
                style="@style/Button.Flat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ellipsize="end"
                android:gravity="center"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:singleLine="true"
                android:text="@string/google_drive"
                android:textColor="@color/colorAccent" />

            <Button
                android:id="@+id/intro_localButton"
                style="@style/Button.Flat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:singleLine="true"
                android:text="@string/local_storage"
                android:textColor="@color/colorAccent" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        style="@style/Text.Subhead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:paddingBottom="24dp"
        android:paddingLeft="64dp"
        android:paddingRight="64dp"
        android:text="@string/choose_backup_source"
        android:textColor="@color/colorWhite" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="64dp" />
</LinearLayout>