<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">




        <TextView
            style="@style/Text.Display1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="sans-serif-thin"
            android:text="@string/greeting"
            android:textColor="@color/colorWhite"
            android:textSize="28sp"
            android:paddingBottom="32dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="24dp"/>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="5"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/intro_newButton"
                style="@style/Button.Flat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:singleLine="true"
                android:text="@string/new_user"
                android:textColor="@color/colorAccent" />

            <Button
                android:id="@+id/intro_restoreButton"
                style="@style/Button.Flat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:ellipsize="end"
                android:gravity="center"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:singleLine="true"
                android:text="@string/restore_app_from_backup"
                android:textColor="@color/colorAccent" />


        </LinearLayout>
    </LinearLayout>

    <TextView
        style="@style/Text.Subhead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:paddingLeft="64dp"
        android:paddingRight="64dp"
        android:text="@string/greeting_thanks"
        android:textColor="@color/colorWhite" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="64dp" />
</LinearLayout>